--- a/app/templates/payment.html
+++ b/app/templates/payment.html
@@ -245,17 +245,17 @@
             <label for="name_zak">Jméno a příjmení žáka:</label>
             <input type="text" id="name_zak" name="name_zak" required>
             
-            <label for="telefon_zak">Telefonní číslo žáka:</label>
+            <label for="telefon_zak">Telefonní číslo žáka :</label>
             <input type="tel" id="telefon_zak" name="telefon_zak" required>
             
             <label for="name_rodic">Jméno a příjmení zákonného zástupce:</label>
             <input type="text" id="name_rodic" name="name_rodic" required>
             
-            <label for="parent_email">E-mail rodiče (nepovinné):</label>
-            <input type="email" id="parent_email" name="parent_email" >    
+            <label for="parent_email">E-mail rodiče:</label>
+            <input type="email" id="parent_email" name="parent_email" required>    
 
-            <label for="cislo_uctu">Vaše číslo učtu:</label>
-            <input type="number" id="cislo_uctu" name="cislo_uctu" required>
+            <label for="cislo_uctu">Vaše číslo učtu (nepovinné):</label>
+            <input type="number" id="cislo_uctu" name="cislo_uctu">
 
             <label for="misto_bydliste">Celé místo bydliště:</label>
             <input type="text" id="misto_bydliste" name="misto_bydliste" required>
