--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -30,7 +30,7 @@
       margin-bottom: 1.5rem;
     }
     .result-section .btn {
-      background-color: #00a8e8;
+      background-color: #163e8e;
     }
     .result-section .btn:hover {
       background-color: #008cb3;
